# PINN-for-physical-prediction

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  data.py  data_generation.py  environment.yml  loss.py  main.ipynb  main.py  model.py  physics.py  pinn_loss.cpp  pyproject.toml  sampling.py  setup.py  train.py  train_directly_1.py  visualize.py
.ipynb_checkpoints/: main-checkpoint.ipynb
models/: pinn_model.pt  pinn_model.pth  pinn_model_best.pt  pinn_model_final.pt
